<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/splash_content"
        android:layout_width="220dp"
        android:layout_height="184dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">

        <ImageView
            android:id="@+id/icon_app"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/splash_logo_content_description"
            android:src="@drawable/iconapp" />

        <TextView
            android:id="@+id/tv_splash_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/roboto"
            android:includeFontPadding="false"
            android:letterSpacing="-0.025"
            android:lineSpacingExtra="0dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/splash_title"
            android:textAlignment="center"
            android:textColor="@color/splash_primary"
            android:textFontWeight="700"
            android:textSize="36.02sp" />

        <TextView
            android:id="@+id/tv_splash_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto"
            android:includeFontPadding="false"
            android:letterSpacing="-0.025"
            android:lineSpacingExtra="0dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/splash_subtitle"
            android:textAlignment="center"
            android:textColor="@color/splash_primary"
            android:textFontWeight="500"
            android:textSize="23.36sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
